nova alteraçao de serviços

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,14 @@
     "target": "es2017",                                     
     "module": "commonjs",                                
     "esModuleInterop": true,                            
-    "forceConsistentCasingInFileNames": true,            
-    "strict": false,
+    "forceConsistentCasingInFileNames": true,           
     "allowJs": true,                               
-    "skipLibCheck": true,
+    "strict": true,
     "sourceMap": true,
     "typeRoots": ["./src/@types", "node_modules/@types"],
     "outDir": "./dist",
     "rootDir": "./",
     "baseUrl": "./src",
-    "experimentalDecorators": true,
     "paths": {
       "@modules/*": ["modules/*"],
       "@config/*": ["config/*"],
