--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
+    "start": "ts-node dist/src/server.js",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --exit-child src/server.ts"
   },
   "prisma": {
